--- a/pset2/CMakeLists.txt
+++ b/pset2/CMakeLists.txt
@@ -4,6 +4,7 @@ project(cotamer CXX)
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 add_compile_options(-g -O3)
 add_link_options(-g -O3)
 
