--- a/.gitignore
+++ b/.gitignore
@@ -19,12 +19,14 @@
 *.xcodeproj
 *~
 .DS_Store
+.cache
 .cproject
 .devcontainer.json
 .deps
 .gitcheckout
 .goutputstream-*
 .hg
+.hugo_build.lock
 .project
 .svn
 .cs61tmpid
