Cull empty events, which are not just idle but single-referenced
This is the problem discovered in class. The failure_event was
scheduled 200ms in the future, but the timer heap didn't trigger it,
because it was mistaken for being empty (i.e., uninteresting/
garbage collectable).

Also improve the GNUmakefile with support for `make SAN=1` and such.

--- a/pset2/CMakeLists.txt
+++ b/pset2/CMakeLists.txt
@@ -1,6 +1,11 @@
 cmake_minimum_required(VERSION 3.16)
 project(cotamer CXX)
 
+option(SAN "Enable AddressSanitizer+UBSanitizer" OFF)
+option(ASAN "Enable AddressSanitizer" OFF)
+option(UBSAN "Enable UBSanitizer" OFF)
+option(TSAN "Enable ThreadSanitizer" OFF)
+
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
@@ -8,20 +13,35 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 add_compile_options(-g -O3 -W -Wall)
 add_link_options(-g -O3 -W -Wall)
 
-add_executable(ping
-    ping.cc
+if((SAN AND NOT TSAN) OR UBSAN)
+    add_compile_options(-fsanitize=undefined)
+    add_link_options(-fsanitize=undefined)
+endif()
+if((SAN AND NOT TSAN) OR ASAN)
+    add_compile_options(-fsanitize=address)
+    add_link_options(-fsanitize=address)
+endif()
+if(TSAN)
+    add_compile_options(-fsanitize=thread)
+    add_link_options(-fsanitize=thread)
+endif()
+
+add_library(Cotamer OBJECT
     detail/cotamer.cc
     detail/utils.cc
+)
+
+add_executable(ping
+    ping.cc
+    $<TARGET_OBJECTS:Cotamer>
 )
 
 add_executable(ctconsensus
     ctconsensus.cc
-    detail/cotamer.cc
-    detail/utils.cc
+    $<TARGET_OBJECTS:Cotamer>
 )
 
 add_executable(ctstubborn
     ctstubborn.cc
-    detail/cotamer.cc
-    detail/utils.cc
+    $<TARGET_OBJECTS:Cotamer>
 )
